# robyn-app-example-extended

./: .dockerignore  .gitignore  Dockerfile  Justfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  ruff.toml  ty.toml
src/: __init__.py  __main__.py
src/robyn_example/: __main__.py
src/robyn_example/adapters/: __init__.py  adapters.py
src/robyn_example/config/: __init__.py  app_config.py
src/robyn_example/config/models/: __init__.py  application_settings.py  cors_settings.py  database_settings.py  filesystem_settings.py  logger_settings.py
src/robyn_example/database/: __init__.py  crime_repository.py  db_manager.py  models.py
src/robyn_example/di/: __init__.py  _proxy_ioc.py  _real_ioc.py
src/robyn_example/domain/: __init__.py  entities.py
src/robyn_example/logger/: __init__.py  handlers.py  interfaces.py  processors.py  renderers.py  setup.py
src/robyn_example/robyn/: __init__.py  auth.py  runner.py
src/robyn_example/robyn/endpoints/: __init__.py  health.py
src/robyn_example/robyn/endpoints/api_v1/: __init__.py  endpoints.py  enums.py  schemas.py
src/robyn_example/robyn/endpoints/exceptions/: __init__.py  exceptions_handler.py  schemas.py
src/robyn_example/robyn/endpoints/helpers/: __init__.py  parsers.py  policies.py
