[build-system]
requires = ["uv_build>=0.10.8,<=0.11.1"]
build-backend = "uv_build"

[project]
name = "robyn-example"
version = "0.1.0"
description = "Robyn app extended example. Robyn is Super Fast Async Python Web Framework with a Rust runtime."
authors = [
    {name = "scriptlogic",email = "dev.scriptlogic@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Framework :: Robyn",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: That-Depends",
  "Framework :: Structlog",
  "Framework :: SQLAlchemy",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "pydantic-settings>=2.14.1",
    "robyn[all]>=0.84.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "that-depends>=3.9.2",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.5",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.urls]
Repository = "https://github.com/script-logic/robyn-app-example-extended"

[tool.uv]
package = true
default-groups = "all"


[tool.pip-licenses]
output-file = "THIRD_PARTY_NOTICES.md"
format = "plain-vertical"
with-license-file = true
with-description = true
with-urls = true
no-license-path = true
with-authors = true
